--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -3,4 +3,193 @@
     display: flex;
     border-top: 10px solid #853E8C;
     border-bottom: 10px solid #853E8C;
+
+    .left{
+        flex: 0.4;
+        overflow: hidden;
+        margin-top: 15%;
+        margin-right: 30px;
+        margin-left: 90px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+            background-color: black;
+            border: 4px solid #853E8C;
+            border-radius: 20px;
+            box-shadow: 0 0 30px (0,0,0,0.18);
+            height: 700px;
+            width: 90%;
+            padding: 40px 0 40px 0;
+            margin-bottom: 200px;
+
+            input {
+                width: 300px;
+                height: 30px;
+                font-size: 14px;
+                color: white;
+                border: 4px solid #853E8C;
+                border-radius: 20px;
+                background-color: black;
+                padding: 5px;
+                margin-bottom: 20px;
+            }
+
+            button{
+                border-radius: 4px;
+                background-color: #853E8C;
+                white-space: nowrap;
+                margin: 10px 0 10px 0;
+                padding: 15px 64px;
+                color: #fff;
+                font-size: 15px;
+                outline: none;
+                border: none;
+                cursor: pointer;
+              
+                &:hover {
+                  transition: all 0.3s ease-out;
+                  background: #fff;
+                  background-color: black;
+                  border: 4px solid #853E8C;
+                }
+            }
+        }
+
+        textarea {
+            width: 400px;
+            height: 350px;
+            font-size: 14px;
+            color: white;
+            border: 4px solid #853E8C;
+            border-radius: 20px;
+            background-color: black;
+            padding: 10px;
+
+            span {
+                color: #853E8C;
+            }
+
+        }
+    }
+
+    .right{
+        background-color: black;
+        flex: 0.6;
+        position: relative;
+        margin-left: 120px;
+        margin-right: 20px;
+        display: flex;
+        flex-direction: column;
+
+        .title{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 50px;
+
+            h1{
+                font-size: 90px;
+                color: white;
+                margin-bottom: 10px;
+                display: flex;
+                flex-direction: row;
+
+                .hyphen{
+                    color: #853E8C;
+                }
+            }
+
+            h2{
+                font-size: 40px;
+                color: #853E8C;
+
+                span{
+                    font-size: inherit;
+                    color: #853E8C;
+                }
+
+                .ityped-cursor {
+                    animation: blink 1s infinite;
+                }
+          
+                @keyframes blink {
+                    50%{
+                        opacity: 1;
+                    }
+                    100%{
+                        opacity: 0;
+                    }  
+                }
+            }
+
+            h3{
+                color: white;
+                font-size: 25px;
+                font-weight: 300;
+                line-height: 50px;
+                padding-top: 30px;
+                padding-bottom: 0;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+        }
+
+        .aboutmebox{
+            background-color: black;
+            height: 600px;
+            display: flex;
+            justify-content: left;
+            align-items: center;
+            margin-top: -10px;
+
+            .icons{
+                margin:0px;
+                display: flex;
+                flex-direction: column;
+                color: white;
+                padding-bottom: 10px;
+
+                .row{
+                    display: flex;
+                    justify-content: row;
+                    padding: 20px 0 20px 0;
+
+                    .icon{
+                        color: #853E8C;
+                        font-size: 60px;
+                        padding-right: 40px;
+                    }
+
+                    .info{
+                        justify-content: column;
+
+                        .head{
+                            font-size: 30px;
+                            color: #853E8C;
+                        }
+
+                        .sub-title{
+                            font-size:25px;
+
+                            a{
+                                color: white;
+                            }
+                        }
+                    }
+
+
+                }
+            }
+        }
+    }
 }
