--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -4,6 +4,11 @@
     background-color: black;
     position: relative;
 
+    @include mobile{
+        flex-direction: column;
+        align-items: center;
+    }
+
     .backgroundintro{
         background-color: black;
         overflow: hidden;
@@ -18,6 +23,13 @@
             top: 15%;
             padding: 0 30%;
             color: white;
+
+            @include mobile{
+                align-items: flex-start;
+                width: 50%;
+                padding-left: 10%;
+                padding-top: 15%;
+            }
             
             .top{
                 flex-direction: row;
@@ -27,10 +39,18 @@
                     font-size: 70px;
                     margin: 10px 0;
                     color: #C9B6BB;   
+
+                    @include mobile{
+                        font-size: 36px;
+                    }
                 }
         
                 h2{
-                    font-size: 45px; 
+                    font-size: 45px;
+                    
+                    @include mobile{
+                        font-size: 30px;
+                    }
                 }                
             }
 
@@ -40,6 +60,10 @@
 
                 h3{
                     font-size: 40px;  
+
+                    @include mobile{
+                        font-size: 30px;
+                    }
                     
                     span{
                         font-size: inherit;
@@ -67,6 +91,10 @@
             width: 100%;
             bottom: 0;
             height: 90vh;
+
+            @include mobile{
+                height: 60%;
+            }
         }
     }
 }
