--- a/src/components/skills/Skills.scss
+++ b/src/components/skills/Skills.scss
@@ -1,17 +1,90 @@
 .skills{
-    background-color: white;
+    background-color: black;
     display: flex;
     border-top: 10px solid #FC742B;
     border-bottom: 10px solid #DD619B;
+    position: relative;
 
     .left{
         flex: 0.5;
         overflow: hidden;
-        margin-top: 15%;
-        margin-right: 30px;
-        margin-left: 90px;
+        display: flex;
         justify-content: center;
         align-items: center;
+        background-color: black;
+
+        .title{
+            margin-top: -70px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            
+            h1{
+                font-size: 90px;
+                color: white;
+                display: flex;
+                flex-direction: row;
+
+                .hyphen{
+                    color: #FC742B;
+                }
+            }
+
+            h2{
+                font-size: 40px;
+                color: #FC742B;
+
+                span{
+                    font-size: inherit;
+                    color: #FC742B;
+                }
+
+                .ityped-cursor {
+                    animation: blink 1s infinite;
+                }
+          
+                @keyframes blink {
+                    50%{
+                        opacity: 1;
+                    }
+                    100%{
+                        opacity: 0;
+                    }  
+                }
+            }
+
+            p{
+                margin-top: 30px;
+                margin-left: 20px;
+                font-size: 30px;
+                font-weight: 5px;
+                line-height: 45px;
+                color: white;
+            }
+
+            button{
+                border-radius: 4px;
+                background-color: #FC742B;
+                white-space: nowrap;
+                padding: 10px 50px;
+                margin-top: 30px;
+                color: #fff;
+                font-size: 35px;
+                outline: none;
+                border: none;
+                cursor: pointer;
+                position: relative;
+              
+                &:hover {
+                  transition: all 0.3s ease-out;
+                  background: #fff;
+                  background-color: black;
+                  border: 4px solid #FC742B;
+                }
+            }
+        }
     }
     
     .right{
@@ -26,31 +99,60 @@
         flex-direction: column;
         color:white;
         list-style: none;
+        font-size: 20px;
 
         .bars li{
-            margin: 10px 0;
+            margin: 10px 6px;
         }
 
         .bar{
             margin-top: 13px;
             margin-bottom: 20px;
-            background:#FC742B;
+            background: white;
             display: block;
-            height: 2px;
-            border: 3px solid rgba(0,0,0,0.3);
+            height: 7px;
+            border: 1px solid white;
             border-radius: 3px;
             overflow: hidden;
             box-shadow: 0 0 10px white;
         }
 
         .bar span{
-            height: 2px;
+            height: 7px;
             float: left;
-            background: white;
+            background: #FC742B;
         }
 
         .python {
             width: 90%
+        }
+
+        .javascript {
+            width: 90%
+        }
+
+        .flask {
+            width: 80%
+        }
+
+        .reactjs {
+            width: 90%
+        }
+
+        .firebase {
+            width: 80%
+        }
+
+        .postgresql {
+            width: 70%
+        }
+
+        .html5 {
+            width: 100%
+        }
+
+        .css {
+            width: 100%
         }
 
     }
