--- a/src/components/topbar/Topbar.scss
+++ b/src/components/topbar/Topbar.scss
@@ -21,11 +21,15 @@
             align-items: center;
 
             .logo{
-                font-size: 40px;
-                font-weight: 3000px;
+                font-size: 50px;
+                font-weight: 7000px;
                 text-decoration: none;
                 color: inherit;
-                margin-right: 40px;
+                margin-left: 80px;
+
+                @include mobile{
+                    margin-left: 0px;
+                }
             }
 
             .itemContainer{
