--- a/src/components/aboutme/Aboutme.scss
+++ b/src/components/aboutme/Aboutme.scss
@@ -9,6 +9,7 @@
     @include mobile{
         flex-direction: column;
         align-items: center;
+        flex-wrap: wrap;
     }
 
     .left{
@@ -21,7 +22,7 @@
         align-items: center;
 
         @include mobile{
-            margin-top: 0;
+            margin-top: 5px;
             margin-bottom: 0;
             height: 160px;
         }
@@ -38,6 +39,8 @@
                 align-items: flex-start;
                 border: 5px solid #689AA9;
                 margin-bottom: 0;
+                margin: 0;
+                border: 0;
             }
 
             img{
@@ -64,6 +67,8 @@
         @include mobile{
             flex-direction: column;
             align-items: flex-start;
+            margin-left: 10px;
+            margin-right: 10px;
         }
 
         .title{
@@ -83,6 +88,25 @@
 
                 .hyphen{
                     color: #689AA9;
+
+                    @include mobile{
+                        font-size: 30px;
+                        line-height: 30px;
+                        padding: 0;
+                        margin: 0;
+                        scrollbar-width: none; // for firefox
+                        &::-webkit-scrollbar{
+                        display: none;
+                        }
+                    }
+                }
+
+                @include mobile{
+                    font-size: 30px;
+                    scrollbar-width: none; // for firefox
+                    &::-webkit-scrollbar{
+                    display: none;
+                    }
                 }
             }
 
@@ -107,6 +131,17 @@
                         opacity: 0;
                     }  
                 }
+
+                @include mobile{
+                    font-size: 20px;
+                    height: 40px;
+                    margin: 0;
+                    padding: 0;
+                    scrollbar-width: none; // for firefox
+                    &::-webkit-scrollbar{
+                    display: none;
+                    }
+                }
             }
 
             p{
@@ -115,6 +150,11 @@
                 font-weight: 5px;
                 line-height: 50px;
                 color: white;
+
+                @include mobile{
+                    font-size: 20px;
+                    line-height: 30px;
+                }
             }
 
             button{
@@ -134,6 +174,12 @@
                   background: #fff;
                   background-color: black;
                   border: 4px solid #689AA9;
+                }
+
+                @include mobile{
+                    font-size: 15px;
+                    line-height: 30px;
+                    padding: 10px 40px;
                 }
             }
         }
